fixed typo in covid19 solution¨

--- a/projects/covid19_solution/notebook/covid19_solution.ipynb
+++ b/projects/covid19_solution/notebook/covid19_solution.ipynb
@@ -390,7 +390,7 @@
     "$$\n",
     "\\begin{equation}\n",
     "\\displaystyle\\int_{I_0}^{I(t)}\\frac{\\mathrm{d}I(t)}{I(t)(N-I(t))} \\mathrm{d}I\n",
-    "= \\displaystyle\\int_{0}^{t}\\frac{\\beta}{N}\\mathrm{d}t=\\beta t\\,,\n",
+    "= \\displaystyle\\int_{0}^{t}\\beta\\mathrm{d}t=\\beta t\\,,\n",
     "\\label{_auto1} \\tag{3}\n",
     "\\end{equation}\n",
     "$$"
